--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/*",
     "start": "node bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "archiver": "^0.14.4",
+    "assert": "^1.3.0",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
+    "mocha": "^2.3.4",
     "moment": "^2.10.3",
-    "mysql": "^2.7.0"
+    "mysql": "^2.7.0",
+    "should": "^7.1.1"
   }
 }
